Fixed z-index issue

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -387,6 +387,7 @@ a:hover {
 
 .uk-container-supersmall {
   max-width: 70%;
+  z-index: 999;
 }
 
 .sponsor-card {
